# nuclear_data

./: .gitignore  ISOTOPE_DATABASE_README.md  README.md  analyze_isotope_database.py  create_combined_isotope_files.py  create_individual_isotope_files.py  create_isotope_database.py  create_isotopes_json.py  create_optimized_isotope_files.py  create_summary.py  docker-compose.yml  extract_nuclear_data.py  extract_table_i.py  extract_with_tabula.py  package-lock.json  package.json  parse_nubase_table.py  pyproject.toml  remove_metadata.py  rsbuild.config.ts  search_table_data.py  split_data_by_source.py  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.old.config.js  webpack.prod.js
config/: package-lock.json  tsconfig.json
data/: chemical_elements_list.csv  complete_isotope_database.csv  nubase2020_complete_summary.csv  nubase_4.mas20.txt:Zone.Identifier
data_sources/: README.md
data_sources/nubase_2020/: pyproject.toml
data_sources/nubase_2020/old_scripts/: extract_nubase2020_with_whitespace.py
data_sources/nubase_2020/src/: extraction_prompts.md
data_sources/nubase_2020/src/nubase_2020/: __init__.py
docs/: bundle.js  chart_of_nucleides.html  chart_of_nucleides.js  half_life_distribution.html  half_life_distribution.js  hldistribution.html  hldistribution.js  index.html  index.js  project.css  zndiagram.html  zndiagram.js
explore/: parse_nubase2020.ipynb
fe_old/: package-lock.json  run_tests.html
nuclear_data/: package-lock.json
pre_docker/: package.json  webpack.config.js
single_version/: README.md  package-lock.json  (+1 more)
(+1486 files in other folders)
