[project]
name = "nuclear_data_visualization"
version = "0.1.0"
description = "A project for visualizing nuclear data."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bas Bloemsaat", email = "bas@bloemsaat.org" }]


[tool.uv.sources]
nubase_2020 = { workspace = true }

[tool.uv.workspace]
members = ["data_sources/*"]
