[project]
name = "nubase-2020"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bas Bloemsaat", email = "bas@bloemsaat.org" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
nubase-2020 = "nubase_2020:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
